egonlang-core/res/examples/invalid/let_decl_with_assign_chain_typed.eg
let a = b: Number = 123;

// out: SyntaxError: unexpected ":"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]